# dbbinder

./: .gitignore  CMakeLists.txt  README.md  abstractgenerator.cpp  abstractgenerator.h  firebirdgenerator.cpp  firebirdgenerator.h  main.cpp  main.h  mysqlgenerator.cpp  mysqlgenerator.h  oraclegenerator.cpp  oraclegenerator.h  postgresqlgenerator.cpp  postgresqlgenerator.h  sql_reader.cpp  sql_reader.h  sqlitegenerator.cpp  sqlitegenerator.h  xml_reader.cpp  xml_reader.h  yaml_reader.cpp  yaml_reader.h
TinyXML/: changes.txt  tinyxml.cpp
dbbinder/: BUILDING  CMakeLists.txt  abstractgenerator.cpp  abstractgenerator.h  firebirdgenerator.cpp  firebirdgenerator.h  main.cpp  main.h  mysqlgenerator.cpp  mysqlgenerator.h  options.gperf  oraclegenerator.cpp  oraclegenerator.h  sql_reader.cpp  sql_reader.h  sqlitegenerator.cpp  sqlitegenerator.h  xml_reader.cpp  xml_reader.h  yaml_reader.cpp  yaml_reader.h
dbbinder/TinyXML/: CMakeLists.txt  nvXML.h  ticpp.h  ticpprc.h  tinyxml.h
dbbinder/examples/firebird/: firetest.cpp  test.xml
dbbinder/examples/oracle/: Makefile  main.cpp  test.xml
dbbinder/examples/sqlite/: Makefile  main.cpp  test.xml  test.yaml
dbbinder/examples/sqlite/Complete/: CMakeLists.txt  main.cpp  test.yaml  test_select.sql
dbbinder/examples/sqlite/Simple/: Makefile  test.yaml
dbbinder/examples/sqlite/XML/: Makefile  test.sql
dbbinder/extra/CMake/: FindDBBinder.cmake
dbbinder/templates/dbengines/: firebird.xml  mysql.xml  oracle.xml  sqlite3.xml
dbbinder/templates/lang/c++/boost/: cpp.tpl  db.tpl.cpp  db.tpl.h  h.tpl  template.xml
dbbinder/test/: Makefile  main.cpp  test.xml  test.yaml
examples/firebird/: Makefile  main.cpp  test.xml
examples/mysql/: Makefile  main.cpp
examples/mysql/Simple/: main.cpp  test.xml
examples/mysql/blob/: CMakeLists.txt  blob.kdev4  blob_test.yaml  db.yaml  insert.cpp  insert.h  insert.sql  main.cpp  select.h
examples/postgres/: CMakeLists.txt  main.cpp  postgres.yaml  select.cpp  select.h  select.sql
examples/sqlite/Complete/: .gitignore  CMakeLists.txt  main.cpp  test.sql
examples/sqlite/Simple/: main.cpp
extra/: blobstream.h
extra/CMake/: DBBinderConfig.cmake
extra/template-validator/: CMakeLists.txt  main.cpp
templates/dbengines/: mysql.xml  postgresql.xml  sqlite3.xml
templates/lang/c++/boost/: cpp.tpl  db.tpl.cpp  db.tpl.h  h.tpl
